<resources>
    <string name="app_name">GmapAndroid</string>

    <!-- Strings for menu options -->
    <string name="action_main_settings">Fretboard Menu</string>
    <string name="item_show_instructions">Instructions</string>
    <string name="item_show_about">About"></string>
    <string name="action_show_reference_card">Reference Card</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="instructions_title">Instructions</string>
    <string name="about_title">About </string>

    <!-- Strings for Instructions -->
    <string name="instructions_text">
        The notes on the fretboard are color coded to represent it\'s number on the scale.\n\n
        This is the major diatonic scale with numbers and associated colors, starting from the root note(1) to the root note of the next octave.
    </string>
    <string name="instructions_cmajor_note_letters">
        Here are the notes and spacing for C major diatonic scale.
    </string>

    <!-- Strings for About -->
    <string name="about_text">
        This is an open source project to display notes on a guitar fretboard for different scales.
    </string>

    <!-- Strings for buttons -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="main_screen_title">Guitar Maps</string>
    <string name="map_main_title">Main Map</string>

    <string name="goto_main_map">Main Map</string>
    <string name="goto_instructions">Instructions</string>
    <string name="goto_about">About</string>

    <string name="update_map_button_text">Go</string>

    <string-array name="key_spinner_items">
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
        <item>A</item>
        <item>A#</item>
        <item>B</item>
    </string-array>

    <string-array name="scale_spinner_items">
        <item>Diatonic</item>
        <item>Pentatonic</item>
        <item>Triad</item>
    </string-array>

    <string-array name="mode_spinner_items">
        <item>Ionian (Major)</item>
        <item>Dorian</item>
        <item>Phrygian</item>
        <item>Lydian</item>
        <item>Mixolydian</item>
        <item>Aeolian (Minor)</item>
        <item>Locrian</item>
    </string-array>

    <string-array name="position_spinner_items">
        <item>Whole Fretboard</item>
        <item>Position 1</item>
        <item>Position 2</item>
        <item>Position 3</item>
        <item>Position 4</item>
        <item>Position 5</item>
    </string-array>


</resources>