<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gmapandroid.MainActivity">
    <item
        android:id="@+id/action_fretboard_menu"
        android:orderInCategory="100"
        android:title="@string/action_main_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_reference_card"
        android:orderInCategory="100"
        android:title="@string/action_show_reference_card"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_instructions"
        android:orderInCategory="100"
        android:title="@string/item_show_instructions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_about"
        android:orderInCategory="100"
        android:title="@string/item_show_about"
        app:showAsAction="never" />
</menu>