<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_goto_map"
            android:layout_width="@dimen/main_menu_btn_width"
            android:layout_height="@dimen/main_menu_btn_height"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/goto_main_map"
            android:textSize="@dimen/main_menu_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_goto_instructions"
            android:layout_width="@dimen/main_menu_btn_width"
            android:layout_height="@dimen/main_menu_btn_height"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/goto_instructions"
            android:textSize="@dimen/main_menu_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_goto_about"
            android:layout_width="@dimen/main_menu_btn_width"
            android:layout_height="@dimen/main_menu_btn_height"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/goto_about"
            android:textSize="@dimen/main_menu_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>